force-app/main/default/objects/CCXR_Chef_Orders__c/CCXR_Chef_Orders__c.object-meta.xml
<CustomObject>
    <label>CCXR_Chef Order</label>
    <nameField>
        <displayFormat>Chef_O-{0000}</displayFormat>
        <label>CCXR_Chef Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Chef Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>