force-app/main/default/objects/CCXR_Chef_Orders__c/fields/assigned_waiter__c.field-meta.xml
<CustomField>
    <fullName>assigned_waiter__c</fullName>
    <formula>CCXR_Order_Id__r.CCXR_Customer_Table_Status__r.CCXR_Table__r.CCXR_Restaurant_Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>assigned waiter</label>
    <type>Text</type>
</CustomField>