force-app/main/default/objects/CCXR_Chef_Orders__c/fields/Assignedtochef__c.field-meta.xml
<CustomField>
    <fullName>Assignedtochef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Restaurant Employee</label>
    <referenceTo>CCXR_Restaurant_Employee__c</referenceTo>
    <relationshipLabel>CCXR_Chef Orders</relationshipLabel>
    <relationshipName>CCXR_Chef_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>