force-app/main/default/objects/CCXR_Chef_Orders__c/fields/button1__c.field-meta.xml
<CustomField>
    <fullName>button1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>button1</label>
    <type>Checkbox</type>
</CustomField>