force-app/main/default/objects/CCXR_Chef_Orders__c/fields/button3__c.field-meta.xml
<CustomField>
    <fullName>button3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>button3</label>
    <type>Checkbox</type>
</CustomField>