force-app/main/default/objects/CCXR_Chef_Orders__c/fields/button4__c.field-meta.xml
<CustomField>
    <fullName>button4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>button4</label>
    <type>Checkbox</type>
</CustomField>