force-app/main/default/objects/CCXR_Chef_Orders__c/fields/CCXR_Accepted_By_Chef__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Accepted_By_Chef__c</fullName>
    <label>CCXR_Accepted_By_Chef</label>
    <length>50</length>
    <type>Text</type>
</CustomField>