force-app/main/default/objects/CCXR_Chef_Orders__c/fields/CCXR_Items_ID__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Items_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Items ID</label>
    <referenceTo>CCXR_Items__c</referenceTo>
    <relationshipLabel>CCXR_Chef Orders</relationshipLabel>
    <relationshipName>CCXR_Chef_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>