force-app/main/default/objects/CCXR_Chef_Orders__c/fields/CCXR_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Order_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Order Id</label>
    <referenceTo>CCXR_Order__c</referenceTo>
    <relationshipLabel>CCXR_Chef Orders</relationshipLabel>
    <relationshipName>CCXR_Chef_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>