force-app/main/default/objects/CCXR_Chef_Orders__c/fields/CCXR_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Quantity__c</fullName>
    <label>CCXR_Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>