force-app/main/default/objects/CCXR_Chef_Orders__c/fields/CCXR_Table__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Table__c</fullName>
    <formula>CCXR_Order_Id__r.CCXR_Customer_Table_Status__r.CCXR_Table__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Table</label>
    <type>Text</type>
</CustomField>