force-app/main/default/objects/CCXR_Chef_Orders__c/fields/Order_status__c.field-meta.xml
<CustomField>
    <fullName>Order_status__c</fullName>
    <label>Order status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Picked-up</fullName>
            </value>
            <value>
                <fullName>Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>