force-app/main/default/objects/CCXR_Chef_Orders__c/fields/orderlineId__c.field-meta.xml
<CustomField>
    <fullName>orderlineId__c</fullName>
    <label>orderlineId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>