force-app/main/default/objects/CCXR_Chef_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_status__c</columns>
    <columns>Assignedtochef__c</columns>
    <columns>CCXR_Items_ID__c</columns>
    <columns>CCXR_Order_Id__c</columns>
    <columns>CCXR_Table__c</columns>
    <columns>button__c</columns>
    <columns>button1__c</columns>
    <columns>CCXR_Quantity__c</columns>
    <columns>orderlineId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>